change swagger api
