# api/openapi.yaml
@@ -12,63 +12,22 @@ info:
 servers:
 - url: https://api.example.com/v1
 tags:
-- name: Events
-  description: Entry of all events.
 - name: Statistics
   description: Everything about statistics.
 paths:
-  /events/{eventType}:
-    post:
-      tags:
-      - Events
-      summary: Add a new event to the store
-      operationId: add_event
-      parameters:
-      - name: eventType
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          $ref: '#/components/schemas/EventType'
-      requestBody:
-        description: A JSON object containing event informations
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/body'
-      responses:
-        "200":
-          description: Event is saved
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        "500":
-          description: General error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-      x-swagger-router-controller: Events
-  /basicStatistisc:
+  /UsersStatistics:
     get:
       tags:
       - Statistics
-      summary: Gets all basic statistics.
-      operationId: get_basic_statistics
+      summary: Gets global users statistics.
+      operationId: get_users_statistics
       responses:
         "200":
           description: Data successfully obtained.
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/BasicStatistics'
-                x-content-type: application/json
+                $ref: '#/components/schemas/UsersStatistics'
         "400":
           description: General error.
           content:
@@ -88,22 +47,34 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-swagger-router-controller: Statistics
-  /statistics/newOffers:
+  /UsersStatistics/from/{from}/to/{to}:
     get:
       tags:
       - Statistics
-      summary: Gets new offers in time.
-      operationId: get_all_new_offers
+      summary: Gets global users statistics of the period.
+      operationId: get_users_statistics_period
+      parameters:
+      - name: from
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: to
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
         "200":
           description: Data successfully obtained.
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/NewOffers'
-                x-content-type: application/json
+                $ref: '#/components/schemas/UsersStatistics'
         "400":
           description: General error.
           content:
@@ -123,31 +94,145 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-swagger-router-controller: Statistics
-  /statistics/newOffers/headhunter/{id}:
+  /MarketplaceStatistics:
     get:
       tags:
       - Statistics
-      summary: Gets new offers in time for specific headhunter.
-      operationId: get_new_offers_headhuner
-      parameters:
-      - name: id
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int32
+      summary: Gets global marketplace statistics.
+      operationId: get_marketplace_statistics
       responses:
         "200":
           description: Data successfully obtained.
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/NewOffersInTime'
-                x-content-type: application/json
+                $ref: '#/components/schemas/MarketplaceStatistics'
+        "400":
+          description: General error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "403":
+          description: The user not authorized.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "500":
+          description: General error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Statistics
+  /MarketplaceStatistics/from/{from}/to/{to}:
+    get:
+      tags:
+      - Statistics
+      summary: Gets global marketplace statistics of the period.
+      operationId: get_marketplace_statistics_period
+      parameters:
+      - name: from
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: to
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Data successfully obtained.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MarketplaceStatistics'
+        "400":
+          description: General error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "403":
+          description: The user not authorized.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "500":
+          description: General error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Statistics
+  /HeadhunterStatistics:
+    get:
+      tags:
+      - Statistics
+      summary: Gets global headhunter statistics.
+      operationId: get_headhunter_statistics
+      responses:
+        "200":
+          description: Data successfully obtained.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HeadhunterStatistics'
+        "400":
+          description: General error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "403":
+          description: The user not authorized.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "500":
+          description: General error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Statistics
+  /HeadhunterStatistics/from/{from}/to/{to}:
+    get:
+      tags:
+      - Statistics
+      summary: Gets global headhunter statistics of the period.
+      operationId: get_headhunter_statistics_period
+      parameters:
+      - name: from
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: to
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Data successfully obtained.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HeadhunterStatistics'
         "400":
           description: General error.
           content:
@@ -169,163 +254,90 @@ paths:
       x-swagger-router-controller: Statistics
 components:
   schemas:
-    EventType:
-      type: string
-      enum:
-      - user
-      - offer
-      - application
-    UserEventType:
-      type: string
-      enum:
-      - NEW_HEADHUNTER
-      - UPDATE_HEADHUNTER
-      - LEAVE_HEADHUNTER
-      - NEW_USER
-      - UPDATE_USER
-      - LEAVE_USER
-    OfferEventType:
-      type: string
-      enum:
-      - NEW_OFFER
-      - UPDATE_OFFER
-      - SUCCESS_CLOSE_OFFER
-      - FAILURE_CLOSE_OFFER
-    ApplicationEventType:
-      type: string
-      enum:
-      - NEW_APPLICATION
-      - UPDATE_APPLICATION
-      - SUCCESS_CLOSE_APPLICATION
-      - FAILURE_CLOSE_APPLICATION
-    UserEvent:
+    UsersStatistics:
       type: object
       properties:
-        id:
-          type: integer
-          format: int32
-        firstName:
+        ofPeriod:
           type: string
-        lastName:
-          type: string
-        birthDate:
-          type: string
-          format: date
-        createdAt:
-          type: string
-          format: date-time
-        eventType:
-          $ref: '#/components/schemas/UserEventType'
-    OfferEvent:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int32
-        userId:
-          type: integer
-          format: int32
-        companyName:
-          type: string
-        positionName:
-          type: string
-        description:
-          type: string
-        createdAt:
-          type: string
-          format: date-time
-        eventType:
-          $ref: '#/components/schemas/OfferEventType'
-    ApplicationEvent:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int32
-        userId:
-          type: integer
-          format: int32
-        note:
-          type: string
-        jobOfferId:
-          type: integer
-        createdAt:
-          type: string
-          format: date-time
-        eventType:
-          $ref: '#/components/schemas/ApplicationEventType'
-    BasicStatistics:
-      type: object
-      properties:
-        numberOfHeadhusters:
-          type: integer
-          format: int32
-        numberOfUsers:
-          type: integer
-          format: int32
-        numberOfOffers:
-          type: integer
-          format: int32
-        numberOfSuccessCloseOffers:
-          type: integer
-          format: int32
-        numberOfFailureCloseOffers:
-          type: integer
-          format: int32
-        ratioOfSuccessfulToUnsuccessfulOffers:
-          type: number
-          format: double
-        ratioOfHeadhunresToUsers:
-          type: number
-          format: double
-      example:
-        numberOfOffers: 1
-        ratioOfHeadhunresToUsers: 7.061401241503109105224211816675961017608642578125
-        numberOfUsers: 6
-        ratioOfSuccessfulToUnsuccessfulOffers: 2.3021358869347654518833223846741020679473876953125
-        numberOfHeadhusters: 0
-        numberOfFailureCloseOffers: 5
-        numberOfSuccessCloseOffers: 5
-    NewOffers:
-      type: object
-      properties:
-        offers:
+        eventTypesSum:
           type: array
           items:
-            $ref: '#/components/schemas/NewOffers_offers'
-      example:
-        offers:
-        - positionName: positionName
-          createdAt: 2000-01-23T04:56:07.000+00:00
-          headhunter: 6
-          companyName: companyName
-          offerId: 0
-        - positionName: positionName
-          createdAt: 2000-01-23T04:56:07.000+00:00
-          headhunter: 6
-          companyName: companyName
-          offerId: 0
-    NewOffersInTime:
-      type: object
-      properties:
-        headhunter:
+            $ref: '#/components/schemas/UsersStatistics_eventTypesSum'
+        usersSum:
           type: integer
           format: int32
-        offers:
+        gendersSum:
           type: array
           items:
-            $ref: '#/components/schemas/NewOffersInTime_offers'
+            $ref: '#/components/schemas/UsersStatistics_gendersSum'
+        rolesSum:
+          type: array
+          items:
+            $ref: '#/components/schemas/UsersStatistics_rolesSum'
       example:
-        offers:
-        - positionName: positionName
-          createdAt: 2000-01-23T04:56:07.000+00:00
-          companyName: companyName
-          offerId: 6
-        - positionName: positionName
-          createdAt: 2000-01-23T04:56:07.000+00:00
-          companyName: companyName
-          offerId: 6
-        headhunter: 0
+        rolesSum:
+        - sum: 5
+          roleType: roleType
+        - sum: 5
+          roleType: roleType
+        usersSum: 6
+        eventTypesSum:
+        - sum: 0
+          eventType: eventType
+        - sum: 0
+          eventType: eventType
+        gendersSum:
+        - sum: 1
+          genderType: genderType
+        - sum: 1
+          genderType: genderType
+        ofPeriod: ofPeriod
+    MarketplaceStatistics:
+      type: object
+      properties:
+        ofPeriod:
+          type: string
+        eventTypesSum:
+          type: array
+          items:
+            $ref: '#/components/schemas/UsersStatistics_eventTypesSum'
+        offersSum:
+          type: integer
+          format: int32
+        headhuntersSum:
+          type: integer
+          format: int32
+        companiesSum:
+          type: integer
+          format: int32
+      example:
+        offersSum: 0
+        companiesSum: 1
+        eventTypesSum:
+        - sum: 0
+          eventType: eventType
+        - sum: 0
+          eventType: eventType
+        ofPeriod: ofPeriod
+        headhuntersSum: 6
+    HeadhunterStatistics:
+      type: object
+      properties:
+        ofPeriod:
+          type: string
+        offersSum:
+          type: array
+          items:
+            $ref: '#/components/schemas/HeadhunterStatistics_offersSum'
+      example:
+        offersSum:
+        - headhunterId: 0
+          offersOpenSum: 6
+          offersCloseSum: 1
+        - headhunterId: 0
+          offersOpenSum: 6
+          offersCloseSum: 1
+        ofPeriod: ofPeriod
     Error:
       required:
       - type
@@ -343,48 +355,52 @@ components:
           type: object
           description: Provides additional metadata about the error.
       description: "Describes error, its identifier and additional info."
-    body:
-      oneOf:
-      - $ref: '#/components/schemas/UserEvent'
-      - $ref: '#/components/schemas/OfferEvent'
-      - $ref: '#/components/schemas/ApplicationEvent'
-    NewOffers_offers:
+    UsersStatistics_eventTypesSum:
       type: object
       properties:
-        offerId:
+        eventType:
+          type: string
+        sum:
           type: integer
           format: int32
-        headhunter:
-          type: integer
-          format: int32
-        companyName:
-          type: string
-        positionName:
-          type: string
-        createdAt:
-          type: string
-          format: date-time
       example:
-        positionName: positionName
-        createdAt: 2000-01-23T04:56:07.000+00:00
-        headhunter: 6
-        companyName: companyName
-        offerId: 0
-    NewOffersInTime_offers:
+        sum: 0
+        eventType: eventType
+    UsersStatistics_gendersSum:
       type: object
       properties:
-        offerId:
+        genderType:
+          type: string
+        sum:
           type: integer
           format: int32
-        companyName:
-          type: string
-        positionName:
-          type: string
-        createdAt:
-          type: string
-          format: date-time
       example:
-        positionName: positionName
-        createdAt: 2000-01-23T04:56:07.000+00:00
-        companyName: companyName
-        offerId: 6
+        sum: 1
+        genderType: genderType
+    UsersStatistics_rolesSum:
+      type: object
+      properties:
+        roleType:
+          type: string
+        sum:
+          type: integer
+          format: int32
+      example:
+        sum: 5
+        roleType: roleType
+    HeadhunterStatistics_offersSum:
+      type: object
+      properties:
+        headhunterId:
+          type: integer
+          format: int32
+        offersOpenSum:
+          type: integer
+          format: int32
+        offersCloseSum:
+          type: integer
+          format: int32
+      example:
+        headhunterId: 0
+        offersOpenSum: 6
+        offersCloseSum: 1
