# service/EventsService.js
@@ -1,16 +1,0 @@
-'use strict';
-
-
-/**
- * Add a new event to the store
- *
- * body Body A JSON object containing event informations (optional)
- * eventType EventType 
- * no response value expected for this operation
- **/
-exports.add_event = function(body,eventType) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
